<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">语音采集</string>
    <string name="userlogin">登录</string>
    <string name="action_settings">Settings</string>
    <string name="userInformation">用户信息</string>
    <string name="tech">教程</string>
    <string name="version">版本：V1.0.0</string>
    <string name="recmodel">录音模式</string>
    <string name="checkmodel">纠错模式</string>
    <string name="autoupload">自动上传</string>
    <string name="title_activity_login">登录</string>
    <string name="logerror">无法登录</string>
    <string name="pswd">密码</string>
    <string name="username">账号</string>
    <string name="newuser">新用户</string>
    <string name="title_activity_record">RecordActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_checkout_fragment">纠错模式</string>
    <string name="title_activity_userinfo_fragment">用户信息</string>
    <string name="title_activity_teach_fragment">教程</string>
    <string name="start">开始</string>
    <string name="jumpOut">跳过</string>
    <string name="replay">回放</string>
    <string name="delete">撤销</string>
    <string name="checkoutcontext">请在此纠正</string>
    <string name="playrec">播放录音</string>
    <string name="tips">请大声念出以下字词</string>
    <string name="quitApp">退出</string>
    <string name="userOutlinelogin">离线登录</string>
    <string name="title_activity_web">WebActivity</string>
	<string name="quit">退出登录</string>
    <string name="remberpass">记住密码？</string>
</resources>
