<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/loginmain"
    tools:context="com.example.recordpro.LoginActivity"
    tools:ignore="MergeRootFrame" >
	<RelativeLayout
	    android:layout_centerHorizontal="true"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="100dp">
	    <EditText
	        android:id="@+id/userName"
	        android:layout_width="fill_parent"
	        android:layout_height="40dp"
	        android:layout_alignParentLeft="true"
	        android:background="@drawable/textview_selector"
	        android:singleLine="true" 
	        android:layout_marginLeft="20dp"
	        android:layout_marginRight="20dp"
	        android:hint="@string/username"
	        android:textColorHint="#AAAAAAAA"/>
	    <EditText
	        android:id="@+id/passwd"
	        android:layout_width="fill_parent"
	        android:layout_height="40dp"
	        android:layout_alignParentLeft="true"
	        android:background="@drawable/textview_selector"
	        android:singleLine="true" 
	        android:layout_below="@+id/userName"
	        android:layout_marginTop="15dp"
	        android:layout_marginLeft="20dp"
	        android:layout_marginRight="20dp"
	        android:hint="@string/pswd"
	        android:inputType="textPassword"
	        android:textColorHint="#AAAAAAAA"
	     	/>
	    <Button
	        android:id="@+id/loginButton"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="30dp"
	        android:layout_marginLeft="40dp"
	        android:layout_marginRight="40dp"
	        android:background="@drawable/button_selector"
	        android:text="@string/userlogin"
	        android:layout_below="@+id/passwd"/>
	    <Button
	        android:id="@+id/loginOutlineButton"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="20dp"
	        android:layout_marginLeft="40dp"
	        android:layout_marginRight="40dp"
	        android:background="@drawable/button_selector"
	        android:text="@string/userOutlinelogin"
	        android:layout_below="@+id/loginButton"/>
	</RelativeLayout>

	<TextView
	    android:id="@+id/cannotLogin"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentLeft="true"
	    android:text="@string/logerror"
	    android:textColor="#FF4994E6" 
	    android:layout_margin="10dp"/>
 	<TextView
	    android:id="@+id/newregist"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentRight="true"
	    android:text="@string/newuser"
	    android:textColor="#FF4994E6" 
	    android:layout_margin="10dp"/>
</RelativeLayout>
